--- a/packages/ui/badge/src/index.less
+++ b/packages/ui/badge/src/index.less
@@ -1,16 +1,16 @@
 @osui-back-top-class-prefix: osui-badge;
 
 .@{osui-back-top-class-prefix} {
-    .ant-badge-status-dot {
+    .@{ant-prefix}-badge-status-dot {
         width: 8px;
         height: 8px;
     }
 
-    .ant-badge-status-processing {
+    .@{ant-prefix}-badge-status-processing {
         background-color: var(--theme-primary-color);
     }
 
-    .ant-badge-status-default {
+    .@{ant-prefix}-badge-status-default {
         background-color: var(--theme-disabled-color);
     }
 }
