--- a/packages/ui/branch-dropdown/src/index.less
+++ b/packages/ui/branch-dropdown/src/index.less
@@ -49,7 +49,7 @@
         max-height: 250px;
         overflow-y: scroll;
 
-        .ant-dropdown-menu-item {
+        .@{ant-prefix}-dropdown-menu-item {
             border-bottom: 1px solid #ecedf0;
             padding: 4px 28px 12px;
             position: relative;
