--- a/packages/ui/input/src/index.less
+++ b/packages/ui/input/src/index.less
@@ -2,14 +2,14 @@
 
 .@{osui-input-class-prefix} {
     // focus
-    &.ant-input-affix-wrapper:focus,
-    &.ant-input-affix-wrapper-focused,
-    &.ant-input:focus,
-    &.ant-input-focused {
+    &.@{ant-prefix}-input-affix-wrapper:focus,
+    &.@{ant-prefix}-input-affix-wrapper-focused,
+    &.@{ant-prefix}-input:focus,
+    &.@{ant-prefix}-input-focused {
         background: var(--input-focus-background-color);
         border-color: var(--theme-border-focus-color);
 
-        input.ant-input {
+        input.@{ant-prefix}-input {
             background: var(--input-focus-background-color);
         }
     }
