--- a/packages/ui/menu-dropdown/src/index.less
+++ b/packages/ui/menu-dropdown/src/index.less
@@ -11,7 +11,7 @@
 }
 
 .@{osui-menu-dropdown-class-prefix}-menu {
-    &.ant-dropdown-menu-submenu-popup ul {
+    &.@{ant-prefix}-dropdown-menu-submenu-popup ul {
         margin-left: -8px;
     }
 }
