--- a/packages/ui/message/src/index.less
+++ b/packages/ui/message/src/index.less
@@ -2,27 +2,27 @@
 
 .@{osui-message-class-prefix} {
     &-alert {
-        .ant-message-notice-content {
+        .@{ant-prefix}-message-notice-content {
             padding: 0;
         }
     }
 
-    .ant-alert-success {
+    .@{ant-prefix}-alert-success {
         background:var(--message-alert-success-bg-color);
         border-color:var(--message-alert-success-border-color);
     }
 
-    .ant-alert-warning {
+    .@{ant-prefix}-alert-warning {
         background: var(--message-alert-warning-bg-color);
         border-color:var(--message-alert-warning-border-color);
     }
 
-    .ant-alert-error {
+    .@{ant-prefix}-alert-error {
         background: var(--message-alert-error-bg-color);
         border-color:var(--message-alert-error-border-color);
     }
 
-    .ant-alert-info {
+    .@{ant-prefix}-alert-info {
         background: var(--message-alert-info-bg-color);
         border-color:var(--message-alert-info-border-color);
     }
@@ -43,7 +43,7 @@
         color: var(--theme-warning-color);
     }
 
-    .ant-alert-close-icon {
+    .@{ant-prefix}-alert-close-icon {
         right: 10px;
     }
 }
