--- a/packages/ui/popover/src/index.less
+++ b/packages/ui/popover/src/index.less
@@ -5,19 +5,19 @@
     font-size: var(--popover-font-size);
     line-height: var(--popover-line-height);
 
-    .ant-popover-content {
+    .@{ant-prefix}-popover-content {
         max-width: 400px;
         word-break: break-all;
     }
 
-    .ant-popover-title {
+    .@{ant-prefix}-popover-title {
         padding: var(--popover-title-padding);
         margin-bottom: -8px;
         border: none;
         font-size: 16px;
     }
 
-    .ant-popover-inner-content {
+    .@{ant-prefix}-popover-inner-content {
         padding: var(--popover-inner-content-padding);
         color: var(--theme-text-color);
     }
