--- a/packages/ui/tooltip/src/index.less
+++ b/packages/ui/tooltip/src/index.less
@@ -1,22 +1,22 @@
 @osui-tooltip-class-prefix: osui-tooltip;
 
 .@{osui-tooltip-class-prefix} {
-    .ant-tooltip-content {
+    .@{ant-prefix}-tooltip-content {
         box-shadow: var(--shadow-1);
     }
 
-    &.ant-tooltip-placement-top .ant-tooltip-arrow,
-    &.ant-tooltip-placement-topLeft .ant-tooltip-arrow,
-    &.ant-tooltip-placement-topRight .ant-tooltip-arrow,
-    &.ant-tooltip-placement-right .ant-tooltip-arrow,
-    &.ant-tooltip-placement-rightTop .ant-tooltip-arrow,
-    &.ant-tooltip-placement-rightBottom .ant-tooltip-arrow,
-    &.ant-tooltip-placement-left .ant-tooltip-arrow,
-    &.ant-tooltip-placement-leftTop .ant-tooltip-arrow,
-    &.ant-tooltip-placement-leftBottom .ant-tooltip-arrow,
-    &.ant-tooltip-placement-bottom .ant-tooltip-arrow,
-    &.ant-tooltip-placement-bottomLeft .ant-tooltip-arrow,
-    &.ant-tooltip-placement-bottomRight .ant-tooltip-arrow {
+    &.@{ant-prefix}-tooltip-placement-top .@{ant-prefix}-tooltip-arrow,
+    &.@{ant-prefix}-tooltip-placement-topLeft .@{ant-prefix}-tooltip-arrow,
+    &.@{ant-prefix}-tooltip-placement-topRight .@{ant-prefix}-tooltip-arrow,
+    &.@{ant-prefix}-tooltip-placement-right .@{ant-prefix}-tooltip-arrow,
+    &.@{ant-prefix}-tooltip-placement-rightTop .@{ant-prefix}-tooltip-arrow,
+    &.@{ant-prefix}-tooltip-placement-rightBottom .@{ant-prefix}-tooltip-arrow,
+    &.@{ant-prefix}-tooltip-placement-left .@{ant-prefix}-tooltip-arrow,
+    &.@{ant-prefix}-tooltip-placement-leftTop .@{ant-prefix}-tooltip-arrow,
+    &.@{ant-prefix}-tooltip-placement-leftBottom .@{ant-prefix}-tooltip-arrow,
+    &.@{ant-prefix}-tooltip-placement-bottom .@{ant-prefix}-tooltip-arrow,
+    &.@{ant-prefix}-tooltip-placement-bottomLeft .@{ant-prefix}-tooltip-arrow,
+    &.@{ant-prefix}-tooltip-placement-bottomRight .@{ant-prefix}-tooltip-arrow {
         &-content {
             box-shadow: none;
         }
