--- a/packages/ui/form/src/index.less
+++ b/packages/ui/form/src/index.less
@@ -1,7 +1,7 @@
 @osui-form-class-prefix: osui-form;
 
 .@{osui-form-class-prefix} {
-    .ant-form-item-explain {
+    .@{ant-prefix}-form-item-explain {
         font-size: 12px;
 
         [role="alert"] {
@@ -10,7 +10,7 @@
         }
     }
 
-    .ant-form-item-has-error .ant-form-item-explain {
+    .@{ant-prefix}-form-item-has-error .@{ant-prefix}-form-item-explain {
         div::before {
             display: var(--form-item-explain-icon-display);
             width: 16px;
@@ -26,7 +26,7 @@
         }
     }
 
-    .ant-form-item-has-warning .ant-form-item-explain {
+    .@{ant-prefix}-form-item-has-warning .@{ant-prefix}-form-item-explain {
         div::before {
             display: var(--form-item-explain-icon-display);
             width: 16px;
@@ -42,7 +42,7 @@
         }
     }
 
-    .ant-form-item-is-validating .ant-form-item-explain {
+    .@{ant-prefix}-form-item-is-validating .@{ant-prefix}-form-item-explain {
         div::before {
             display: var(--form-item-explain-icon-display);
             width: 16px;
@@ -59,44 +59,44 @@
         }
     }
     // status
-    .ant-form-item-has-error {
-        .ant-input:focus,
-        .ant-input-affix-wrapper:focus,
-        .ant-input-focused,
-        .ant-input-affix-wrapper-focused {
+    .@{ant-prefix}-form-item-has-error {
+        .@{ant-prefix}-input:focus,
+        .@{ant-prefix}-input-affix-wrapper:focus,
+        .@{ant-prefix}-input-focused,
+        .@{ant-prefix}-input-affix-wrapper-focused {
             background: var(--input-error-focus-background-color);
 
-            input.ant-input {
+            input.@{ant-prefix}-input {
                 background: var(--input-error-focus-background-color);
             }
         }
     }
 
-    .ant-form-item-has-warning {
-        .ant-input:focus,
-        .ant-input-affix-wrapper:focus,
-        .ant-input-focused,
-        .ant-input-affix-wrapper-focused {
+    .@{ant-prefix}-form-item-has-warning {
+        .@{ant-prefix}-input:focus,
+        .@{ant-prefix}-input-affix-wrapper:focus,
+        .@{ant-prefix}-input-focused,
+        .@{ant-prefix}-input-affix-wrapper-focused {
             background: var(--input-warning-focus-background-color);
 
-            input.ant-input {
+            input.@{ant-prefix}-input {
                 background: var(--input-warning-focus-background-color);
             }
         }
     }
 
-    .ant-form-item-extra {
+    .@{ant-prefix}-form-item-extra {
         color: var(--theme-placeholder-color);
         margin-top: 6px;
         font-size: 12px;
     }
 
     &-validate-message-inline {
-        &.ant-form-item-with-help {
+        &.@{ant-prefix}-form-item-with-help {
             margin-bottom: @form-item-margin-bottom;
         }
 
-        .ant-form-item-explain {
+        .@{ant-prefix}-form-item-explain {
             position: absolute;
             left: 100%;
             padding-left: 10px;
@@ -107,7 +107,7 @@
     }
 
     &-validate-message-has-hint {
-        .ant-form-item-explain {
+        .@{ant-prefix}-form-item-explain {
             top: 6px;
         }
     }
