--- a/packages/ui/modal/src/index.less
+++ b/packages/ui/modal/src/index.less
@@ -1,62 +1,62 @@
 @osui-modal-class-prefix: osui-modal;
 
 .@{osui-modal-class-prefix} {
-    .ant-modal-close-x {
+    .@{ant-prefix}-modal-close-x {
         line-height: var(--modal-close-icon-line-height);
     }
 
-    .ant-modal-header {
+    .@{ant-prefix}-modal-header {
         padding: var(--modal-padding);
     }
 
-    .ant-modal-body {
+    .@{ant-prefix}-modal-body {
         border-bottom: var(--modal-body-border-bottom);
         padding: var(--modal-body-padding);
         overflow: auto;
     }
 
-    .ant-modal-footer {
+    .@{ant-prefix}-modal-footer {
         border-top: var(--modal-footer-border-top);
     }
 
     &-body-border {
-        .ant-modal-body {
+        .@{ant-prefix}-modal-body {
             border-bottom: 1px solid var(--theme-border-color-split);
             border-top: 1px solid var(--theme-border-color-split);
         }
     }
 
-    .ant-modal-title {
+    .@{ant-prefix}-modal-title {
         max-width: 95%;
     }
 
     // no-border
     &-no-border {
-        .ant-modal-title {
+        .@{ant-prefix}-modal-title {
             line-height: var(--modal-title-line-height);
         }
 
-        .ant-modal-header {
+        .@{ant-prefix}-modal-header {
             border-bottom: 1px solid var(--theme-component-bg);
             padding: var(--modal-no-border-padding);
         }
 
-        .ant-modal-body {
+        .@{ant-prefix}-modal-body {
             padding-top: var(--modal-no-border-body-padding-top);
         }
 
-        .ant-modal-footer {
+        .@{ant-prefix}-modal-footer {
             border-top: 1px solid var(--theme-component-bg);
         }
     }
 
-    .ant-modal-content {
-        .ant-modal-close {
+    .@{ant-prefix}-modal-content {
+        .@{ant-prefix}-modal-close {
             svg {
                 height: var(--modal-close-icon-height);
             }
 
-            .ant-modal-close-icon {
+            .@{ant-prefix}-modal-close-icon {
                 color: var(--theme-text-color);
             }
         }
@@ -76,38 +76,38 @@
         font-size: 14px;
     }
 
-    .ant-modal-confirm-body {
+    .@{ant-prefix}-modal-confirm-body {
         min-height: 76px;
         border-bottom: var(--modal-body-border-bottom);
     }
 
-    .ant-modal-confirm-content {
+    .@{ant-prefix}-modal-confirm-content {
         margin-bottom: 40px;
         margin-left: 55px;
     }
 
-    .ant-modal-confirm-btns {
+    .@{ant-prefix}-modal-confirm-btns {
         margin-top: 15px;
     }
 
-    &.ant-modal-confirm-error .ant-modal-confirm-body > &-icon svg {
+    &.@{ant-prefix}-modal-confirm-error .@{ant-prefix}-modal-confirm-body > &-icon svg {
         color: var(--theme-error-color);
     }
 
-    &.ant-modal-confirm-warning .ant-modal-confirm-body > &-icon svg,
-    &.ant-modal-confirm-confirm .ant-modal-confirm-body > &-icon svg {
+    &.@{ant-prefix}-modal-confirm-warning .@{ant-prefix}-modal-confirm-body > &-icon svg,
+    &.@{ant-prefix}-modal-confirm-confirm .@{ant-prefix}-modal-confirm-body > &-icon svg {
         color: var(--theme-warning-color);
     }
 
-    &.ant-modal-confirm-info .ant-modal-confirm-body > &-icon svg {
+    &.@{ant-prefix}-modal-confirm-info .@{ant-prefix}-modal-confirm-body > &-icon svg {
         color: var(--theme-info-color);
     }
 
-    &.ant-modal-confirm-success .ant-modal-confirm-body > &-icon svg {
+    &.@{ant-prefix}-modal-confirm-success .@{ant-prefix}-modal-confirm-body > &-icon svg {
         color: var(--theme-success-color);
     }
 
-    .ant-modal-confirm-body > .osui-modal-confirm-icon + .ant-modal-confirm-title + .ant-modal-confirm-content {
+    .@{ant-prefix}-modal-confirm-body > .osui-modal-confirm-icon + .@{ant-prefix}-modal-confirm-title + .@{ant-prefix}-modal-confirm-content {
         margin-left: 55px;
         margin-bottom: 40px;
     }
