--- a/packages/ui/search-select-list/src/index.less
+++ b/packages/ui/search-select-list/src/index.less
@@ -2,23 +2,23 @@
 
 .@{osui-search-select-list-class-prefix} {
     &-popover {
-        .ant-popover-content {
+        .@{ant-prefix}-popover-content {
             width: 280px;
 
-            .ant-popover-inner {
-                .ant-popover-title {
+            .@{ant-prefix}-popover-inner {
+                .@{ant-prefix}-popover-title {
                     border-bottom: none;
 
-                    .ant-menu-horizontal {
+                    .@{ant-prefix}-menu-horizontal {
                         border-bottom-width: 1px;
                     }
 
-                    .ant-menu-item {
+                    .@{ant-prefix}-menu-item {
                         margin-right: 33px;
                         margin-left: 0;
                     }
 
-                    .ant-menu-item:not(.ant-menu-item-selected) {
+                    .@{ant-prefix}-menu-item:not(.@{ant-prefix}-menu-item-selected) {
                         color: var(--color-gray-7);
 
                         &:hover {
@@ -28,7 +28,7 @@
                     }
                 }
 
-                .ant-popover-inner-content {
+                .@{ant-prefix}-popover-inner-content {
                     padding: 12px 0;
 
                     .input-box {
@@ -58,7 +58,7 @@
                 }
             }
 
-            .ant-popover-arrow {
+            .@{ant-prefix}-popover-arrow {
                 display: none;
             }
         }
