--- a/packages/ui/slider/src/index.less
+++ b/packages/ui/slider/src/index.less
@@ -1,8 +1,8 @@
 @osui-slider-class-prefix: osui-slider;
 
 .@{osui-slider-class-prefix} {
-    &.ant-slider {
-        .ant-slider-handle {
+    &.@{ant-prefix}-slider {
+        .@{ant-prefix}-slider-handle {
             &-dragging&-dragging&-dragging {
                 box-shadow: none;
             }
@@ -14,25 +14,25 @@
     }
 
     &-icloud {
-        &.ant-slider.ant-slider-disabled {
-            .ant-slider-rail {
+        &.@{ant-prefix}-slider.@{ant-prefix}-slider-disabled {
+            .@{ant-prefix}-slider-rail {
                 background: var(--color-gray-3);
             }
-            .ant-slider-handle {
+            .@{ant-prefix}-slider-handle {
                 background: var(--theme-disabled-color);
             }
-            .ant-slider-dot {
+            .@{ant-prefix}-slider-dot {
                 border-color: var(--theme-component-bg) !important;
             }
         }
-        &.ant-slider {
-            .ant-slider-rail,
-            .ant-slider-track,
-            .ant-slider-step {
+        &.@{ant-prefix}-slider {
+            .@{ant-prefix}-slider-rail,
+            .@{ant-prefix}-slider-track,
+            .@{ant-prefix}-slider-step {
                 height: 10px;
             }
 
-            .ant-slider-dot {
+            .@{ant-prefix}-slider-dot {
                 position: absolute;
                 top: 0;
                 width: 1px;
@@ -44,7 +44,7 @@
                 border-radius: 0;
             }
 
-            .ant-slider-handle {
+            .@{ant-prefix}-slider-handle {
                 &::after {
                     content: '';
                     border: 1px solid #fff;
