--- a/packages/ui/space/src/index.less
+++ b/packages/ui/space/src/index.less
@@ -2,19 +2,19 @@
 
 .@{osui-space-class-prefix} {
     &-small {
-        .ant-space-item:not(:last-child) {
+        .@{ant-prefix}-space-item:not(:last-child) {
             margin-right: var(--space-small) !important;
         }
     }
 
     &-middle {
-        .ant-space-item:not(:last-child) {
+        .@{ant-prefix}-space-item:not(:last-child) {
             margin-right: var(--space-middle) !important;
         }
     }
 
     &-large {
-        .ant-space-item:not(:last-child) {
+        .@{ant-prefix}-space-item:not(:last-child) {
             margin-right: var(--space-large) !important;
         }
     }
