--- a/packages/ui/steps/src/index.less
+++ b/packages/ui/steps/src/index.less
@@ -1,13 +1,13 @@
 @osui-steps-class-prefix: osui-steps;
 
 .@{osui-steps-class-prefix} {
-    &.ant-steps-navigation .ant-steps-item-active {
+    &.@{ant-prefix}-steps-navigation .@{ant-prefix}-steps-item-active {
         &::before {
             height: 0;
         }
     }
 
-    &.ant-steps-navigation .ant-steps-item {
+    &.@{ant-prefix}-steps-navigation .@{ant-prefix}-steps-item {
         &::before {
             transition: none;
         }
