--- a/packages/ui/tag/src/index.less
+++ b/packages/ui/tag/src/index.less
@@ -13,11 +13,11 @@
         background: var(--theme-bg-color-base);
     }
 
-    .ant-tag-close-icon {
+    .@{ant-prefix}-tag-close-icon {
         color: var(--theme-text-color);
     }
 
-    &.ant-tag-blue {
+    &.@{ant-prefix}-tag-blue {
         color: var(--tag-blue-font-color);
         background: var(--tag-blue-bg-color);
 
@@ -27,7 +27,7 @@
         }
     }
 
-    &.ant-tag-green {
+    &.@{ant-prefix}-tag-green {
         color: var(--tag-green-font-color);
         background: var(--tag-green-bg-color);
 
@@ -37,7 +37,7 @@
         }
     }
 
-    &.ant-tag-red {
+    &.@{ant-prefix}-tag-red {
         color: var(--tag-red-font-color);
         background: var(--tag-red-bg-color);
 
@@ -47,7 +47,7 @@
         }
     }
 
-    &.ant-tag-yellow {
+    &.@{ant-prefix}-tag-yellow {
         color: var(--tag-yellow-font-color);
         background: var(--tag-yellow-bg-color);
 
@@ -57,7 +57,7 @@
         }
     }
 
-    &.ant-tag-purple {
+    &.@{ant-prefix}-tag-purple {
         color: var(--tag-font-color);
         background: var(--tag-purple-color);
     }
@@ -66,7 +66,7 @@
 .@{osui-tag-class-prefix}-checkable {
     border: 2px solid transparent;
 
-    &.ant-tag-checkable-checked {
+    &.@{ant-prefix}-tag-checkable-checked {
         background: var(--color-brand-1);
         border: 2px solid var(--color-brand-4);
         color: @text-color;
@@ -85,7 +85,7 @@
 }
 
 .@{osui-tag-class-prefix}-round {
-    &.ant-tag {
+    &.@{ant-prefix}-tag {
         border-radius: 14px;
         padding: 0 10px;
     }
