--- a/packages/ui/toggle-button/src/index.less
+++ b/packages/ui/toggle-button/src/index.less
@@ -9,7 +9,7 @@
         margin-right: 8px;
     }
 
-    &.ant-btn {
+    &.@{ant-prefix}-btn {
         border: 1px solid transparent;
         box-shadow: none;
         color: var(--theme-text-color);
@@ -23,7 +23,7 @@
         }
     }
 
-    &-number.ant-btn {
+    &-number.@{ant-prefix}-btn {
         border: 1px solid var(--color-gray-4);
 
         .num {
@@ -39,7 +39,7 @@
     }
 
     &&-clicked {
-        &.ant-btn {
+        &.@{ant-prefix}-btn {
             color: var(--color-gray-1);
             background-color: var(--color-gray-8);
         }
