fix: message 添加对config的patch

--- a/packages/ui/message/src/index.less
+++ b/packages/ui/message/src/index.less
@@ -47,3 +47,15 @@
         right: 10px;
     }
 }
+
+// 对original的样式patch
+.@{osui-message-class-prefix} {
+    .ant-message-custom-content {
+        display: flex;
+        align-items: center;
+
+        svg {
+            padding-right: var(--alert-icon-padding-right);
+        }
+    }
+}
